name:                HaskellJWT
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/HaskellJWT#readme
license:             BSD3
license-file:        LICENSE
author:              Jim Holmstrom
maintainer:          jim.holmstroem@gmail.com
copyright:           2017 Jim Holmstrom
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , cryptonite == 0.21
                     , memory == 0.14.1
                     , bytestring >= 0.10.8 && < 1
                     , base64-bytestring >= 1.0.0.1 && < 2
  default-language:    Haskell2010

executable HaskellJWT-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , HaskellJWT
  default-language:    Haskell2010

test-suite HaskellJWT-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , HaskellJWT
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/HaskellJWT
